fixed touch issue with sparkles on mobile

--- a/site.css
+++ b/site.css
@@ -125,7 +125,7 @@ footer .logoimage img {
   border-bottom: solid 5px white;
   color: white;
 }
-.indexlogo{
+.indexlogo {
   max-width: 100px;
   position: absolute;
   left: 25px;
@@ -265,7 +265,7 @@ figure a:hover {
   list-style: none;
   padding: 10px;
   /*font-family: 'Rubik', sans-serif;*/
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   display: grid;
   grid-template-columns: 1fr;
 }
@@ -284,14 +284,14 @@ figure a:hover {
 .deet {
   padding: 5px;
   padding-left: 15px;
-  font-size: .9em;
+  font-size: 0.9em;
 }
 
 .detailnotes {
   align-self: flex-end;
 }
 .productnotes {
-  font-size: .8em;
+  font-size: 0.8em;
 }
 
 .sp-wrap {
@@ -451,7 +451,7 @@ figure a:hover {
   }
 }
 
-@media only screen and (max-width: 200px) {
+/* @media only screen and (max-width: 200px) {
   figure {
     min-height: 100px;
     height: auto;
@@ -472,4 +472,4 @@ figure a:hover {
   figure a:hover {
     font-size: 1em;
   }
-}
+} */
